feat(ui): Hide RAG menu in Lite image
- Conditionally show RAG Chat menu based on RAG_SERVICE_ENABLED
- Updated routes/setup.js to pass ragEnabled to all view renders
- Wrapped RAG menu items in EJS conditionals in 6 view files
- Improves UX consistency between Lite and Full images
- Prevents confusion from non-functional menu items

Related: UI-001, DOCKER-001

--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -46,12 +46,14 @@
                             <span>Chat</span>
                         </a>
                     </li>
+                    <% if (ragEnabled) { %>
                     <li>
                         <a href="/rag" class="sidebar-link">
                             <i class="fa-solid fa-comment"></i>
                             <span>RAG Chat</span>
                         </a>
-                    </li>                    
+                    </li>
+                    <% } %>                    
                     <li>
                         <a href="/playground" class="sidebar-link">
                             <i class="fa-solid fa-flask-vial"></i>
