--- a/views/playground.ejs
+++ b/views/playground.ejs
@@ -70,12 +70,14 @@
                             <span>Chat</span>
                         </a>
                     </li>
+                    <% if (ragEnabled) { %>
                     <li>
                         <a href="/rag" class="sidebar-link">
                             <i class="fa-solid fa-comment"></i>
                             <span>RAG Chat</span>
                         </a>
-                    </li>                     
+                    </li>
+                    <% } %>                     
                     <li>
                         <a href="/playground" class="sidebar-link active">
                             <i class="fa-solid fa-flask-vial"></i>
